--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -2,11 +2,13 @@
 
 {% block title "React" %}
 {% block stylesheets %}
+	<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+
 	{{ encore_entry_link_tags('app') }}
 {% endblock %}
 
 {% block body %}
-<div id="app"></div>
+	<div id="app"></div>
 {% endblock %}
 
 {% block javascripts %}
